--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,38 +1,34 @@
 version: '3'
 
+networks:
+  chess-bot:
+    driver: bridge
+    
 services:
 
-  selenium-hub:
-    image: selenium/hub:4.17.0
-    container_name: selenium-hub
-    ports:
-      - "4442:4442"
-      - "4443:4443"
-      - "4444:4444"
-
-  selenium-worker-1:
-    image: selenium/node-chrome:4.17.0
+  selenium_standalone:
+    container_name: selenium-chess
+    image: selenium/standalone-chrome:130.0
     shm_size: 4gb
-    depends_on:
-      - selenium-hub
     environment:
-      - SE_EVENT_BUS_HOST=selenium-hub
-      - SE_EVENT_BUS_PUBLISH_PORT=4442
-      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
       - VNC_NO_PASSWORD=1
       - SCREEN_WIDTH=1920
       - SCREEN_HEIGHT=1080
     ports:
-      - "7900:7900"
-
-  chess-com-bot-worker-1:
+      - "7901:7900"
+    networks:
+      - chess-bot
+      
+  chess-com-bot:
+    container_name: chess-com-bot
     build: ..
-    image: chess-com-bot-selenium:latest
     depends_on:
-      - selenium-hub
+      - selenium_standalone
     environment:
       - elo_rating=-1
       - game_timer_ms=150000
       - first_move_w=e2e4
-      - hub_host=selenium-hub
+      - hub_host=selenium-chess
       - hub_port=4444
+    networks:
+      - chess-bot
